# updater

./: CMakeLists.txt  config.cpp  config.h  config.json.exemple  main.cpp  updatemanager.cpp  updatemanager.h
